--- a/ATLAS.html
+++ b/ATLAS.html
@@ -94,7 +94,11 @@
         .menu-overlay.open { opacity: 1; pointer-events: auto; }
 
         .hero-section { height: 100vh; width: 100%; background-size: cover; background-position: center; position: relative; z-index: 10; }
-        .hero-fade-bottom { position: absolute; bottom: 0; left: 0; width: 100%; height: 50%; background: linear-gradient(to bottom, transparent 0%, #0a0a0a 100%); }
+        
+        /* === SOMBRA/DEGRADÊ REMOVIDO === */
+        .hero-fade-bottom { 
+            display: none; /* Oculta o elemento de sombra */
+        }
 
         .cine-card { position: relative; aspect-ratio: 2/3; border-radius: 12px; overflow: hidden; cursor: pointer; border: 1px solid rgba(255, 255, 255, 0.05); transition: transform 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94); }
         .cine-card:hover { transform: scale(1.03); z-index: 30; box-shadow: 0 25px 60px rgba(0,0,0,0.9); border-color: rgba(255, 255, 255, 0.25); }
@@ -233,8 +237,9 @@
         <div id="view-member" class="transition-opacity duration-500">
             <section id="main-hero" class="hero-section" style="background-image: url('https://images.unsplash./photo-1626814026160-2237a95fc5a0?q=80&w=1920&auto=format&fit=crop');">
                 <div class="hero-fade-bottom"></div>
-                <div class="absolute bottom-20 left-12 reveal">
-                    <h1 id="hero-title" class="text-7xl font-black italic tracking-tighter uppercase mb-2">Protocolos de Domínio</h1>
+                
+                <div class="absolute bottom-20 left-12 reveal z-20"> 
+                    <h1 id="hero-title" class="text-7xl font-black italic tracking-tighter uppercase mb-2">Ecossistemas  SYS</h1>
                     <p id="hero-subtitle" class="text-zinc-500 text-sm uppercase tracking-[0.5em] mono">Sincronize. Ative. Domine.</p>
                 </div>
             </section>
@@ -724,8 +729,8 @@
 
         db = JSON.parse(localStorage.getItem('agentes_sys_singularity')) || {
             config: {
-                heroTitle: "Protocolos de Domínio",
-                heroImg: "https://images.unsplash.com/photo-1626814026160-2237a95fc5a0?q=80&w=1920"
+                heroTitle: "Ecossistema SYS",
+                heroImg: "https://images.unsplash./photo-1626814026160-2237a95fc5a0?q=80&w=1920"
             },
             modules: generateInitialAgents()
         };
@@ -1058,4 +1063,3 @@ ${mod.roadmap.map(r => `- ${r}`).join('\n')}
 </script>
 </body>
 </html>
-
